--- a/client/client/app/app.component.html
+++ b/client/client/app/app.component.html
@@ -1,4 +1,17 @@
-﻿<!-- main app container -->
+﻿
+<!--Navbar-->
+<nav>
+    <div class="navbar-fixed">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+    </div>
+</nav>
+
+<!-- main app container -->
 <div class="jumbotron">
     <div class="container">
         <div class="col-sm-8 col-sm-offset-2">
