--- a/client/client/app/app.component.html
+++ b/client/client/app/app.component.html
@@ -1,12 +1,23 @@
 ﻿
 <!--Navbar-->
 <nav>
-    <div class="navbar-fixed">
-        <a href="#" class="brand-logo">Logo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
+    <div class="nav-wrapper flow-text">
+        <a href="#" class="brand-logo left ">Logo</a>
+        <ul id="nav-mobile" class="right ">
             <li><a href="sass.html">Sass</a></li>
             <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li>
+                <form>
+                    <div class="input-field">
+                        <input id="search" type="search" required>
+                        <label class="label-icon" for="search">
+                            <i class="material-icons flow-text">search</i>
+                        </label>
+                        <i class="material-icons flow-text">close</i>
+                    </div>
+                </form>
+            </li>
+            <li><a href="collapsible.html" [routerLink]="['/login']" >Login</a></li>
         </ul>
     </div>
 </nav>
@@ -24,9 +35,6 @@
 <!-- credits -->
 <div class="text-center">
     <p>
-        <a href="http://jasonwatmore.com/post/2017/02/22/mean-with-angular-2-user-registration-and-login-example-tutorial" target="_top">MEAN Stack with Angular 2 - User Registration and Login Example & Tutorial</a>
-    </p>
-    <p>
-        <a href="http://jasonwatmore.com" target="_top">JasonWatmore.com</a>
+        Kolya
     </p>
 </div>
