modified:   client/client/app/app.component.html 	modified:   client/client/app/app.component.ts 	modified:   client/client/app/app.module.ts 	new file:   client/client/app/i18n/en.json 	new file:   client/client/app/i18n/ru.json 	modified:   client/client/app/main.ts 	new file:   client/client/app/polyfills.ts 	new file:   client/client/assets/i18n/en.png 	new file:   client/client/assets/i18n/ru.png 	modified:   client/client/package-lock.json 	modified:   client/client/package.json 	modified:   client/client/systemjs.config.js

--- a/client/client/app/app.component.html
+++ b/client/client/app/app.component.html
@@ -17,10 +17,22 @@
                     </div>
                 </form>
             </li>
-            <li><a href="collapsible.html" [routerLink]="['/login']" >Login</a></li>
+            <li><a href="collapsible.html" [routerLink]="['/login']" >{{ 'LOGIN' | translate }}</a></li>
         </ul>
     </div>
 </nav>
+<!--
+
+<div>
+    <h2>{{ 'HOME' | translate }}</h2>
+    <label>
+        {{ 'HOME' | translate }}
+        <select #langSelect (change)="translate.use(langSelect.value)">
+            <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+        </select>
+    </label>
+</div>
+-->
 
 <!-- main app container -->
 <div class="jumbotron">
